--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>currencyConverter</title>
   </head>
-  <body>
+  <body style="background-color: rgb(93, 88, 88);">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
